vlib/v/checker/tests/decompose_interface_err.vv
module main

import arrays

interface Value {}

fn some_function(values ...Value) {
	println(values)
}

fn main() {
	country_ids := [
		'AD',
		'AE',
		'AF',
	]
	region_id := 'something'
	some_function(...country_ids)
}
